[AOS 개발] Fire base이전 및 카메라 사진 적용 싸인,QR 작동확인, 앱아이콘 수정

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SinkLeader</string>
+    <string name="app_name">세인홈시스\n설치관리자</string>
 
 
     <string name="server_error">시스템 점검 중입니다.\n보다 좋은 서비스로 보답 드리겠습니다.</string>
